idk how webdev works
i bet this isnt even webdev, but i will absolutely not use the fucking web frameworks

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Polylogic64.github.io</title>
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
 <body>
-  ('_') page under construction
+  <p>('_') page under construction</p>
 </body>
